# hs-term-emulator

./: .gitignore  README  README.md  cabal.project  devpacks.toml
hs-sdl-term-emulator/: CHANGELOG.md  Main.hs  hs-sdl-term-emulator.cabal
hs-sdl-term-emulator/src/System/Terminal/Emulator/SDL/: ImageFont.hs  KeyboardTranslate.hs  LibMain.hs  Pty.hs
hs-term-emulator/: CHANGELOG.md  LICENSE  hs-term-emulator.cabal
hs-term-emulator/bench/: Main.hs
hs-term-emulator/src/System/Terminal/Emulator/: Attrs.hs  DECPrivateMode.hs  KeyboardInput.hs  Parsing.hs  Term.hs  Term2.hs  TermLines.hs  TermSurface.hs
hs-term-emulator/src/System/Terminal/Emulator/KeyboardInput/: KeyPressToPty.hs
hs-term-emulator/src/System/Terminal/Emulator/Parsing/: Internal.hs  Types.hs
hs-term-emulator/src/System/Terminal/Emulator/Term/: Process.hs  Resize.hs  TermChange.hs
hs-term-emulator/src/System/Terminal/Emulator/TermSurface/: ApplyTermSurfaceChange.hs  CollapseTermSurfaceChanges.hs  FromTerm.hs  TermSurfaceChange.hs
hs-term-emulator/test/System/Terminal/Emulator/Parsing/: InternalSpec.hs
hs-term-emulator/test/System/Terminal/Emulator/Term/: ArbitraryTermAtom.hs  ProcessSpec.hs  SimpleTerm.hs  TermSurfaceChangesSpec.hs
hs-term-emulator/test/System/Terminal/Emulator/TermSurface/: CollapseTermSurfaceChangesSpec.hs
pkgconfig/: sdl2.pc
